# PIRoC

./: README.md  phyloscreen.py
PIRoC/: README.md  pyproject.toml  setup.py
PIRoC/src/PIRoC/: __init__.py  __main__.py  branch_length.py  classifiy.py  classify.py  clean_orthogroups.py  clean_trees.py  cli.py  metadata.py  output.py  review_flags.py  root.py  support.py
PIRoC/src/PIRoC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phyloscreen/: pyproject.toml  setup.py
phyloscreen/src/phyloscreen/: __init__.py  __main__.py  branch_length.py  classifiy.py  clean_trees.py  cli.py  metadata.py  output.py  root.py  support.py
phyloscreen/src/phyloscreen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
