[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PIRoC"
version = "0.1.0"
description = "A tool for decontamination of inverterbrate transcriptomes using phylogenetic trees"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "Mark Goldberg"}
]
keywords = [
    "bioinformatics",
    "phylogenetics",
    "contamination",
    "orthogroups"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "ete3>=3.1.0",
    "numpy>=1.20.0",
    "biopython>=1.79",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
PIRoC = "PIRoC.__main__:main"

[project.urls]
Homepage = "https://github.com/migoldberg/PIRoC"
Repository = "https://github.com/migoldberg/PIRoC"

[tool.setuptools.packages.find]
where = ["src"]
