[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phyloscreen"
version = "0.1.0"
description = "A tool for decontamination of inverterbrate transcriptomes using phylogenetic trees"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Mark Goldberg"}
]
keywords = [
    "bioinformatics",
    "phylogenetics",
    "contamination",
    "orthogroups"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "ete3>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
phyloscreen = "phyloscreen.__main__:main"

[project.urls]
Homepage = "https://github.com/markgoldberg11/dev-phyloscreen"
Repository = "https://github.com/markgoldberg11/dev-phyloscreen"

[tool.setuptools.packages.find]
where = ["src"]
